--- a/Styles/globals.css
+++ b/Styles/globals.css
@@ -1,4 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*
+{
+    background-color: #fff;
+    font-family: 'Nunito', 'Poppins', 'Inter', 'Space Grotesk';
+}
+
+/* Navbar Starts */
+
+.navbar
+{
+    width: 100vw;
+    height: 6vw;
+    padding: 0.2vw 2vw;
+    border-bottom-left-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.1s ease-in-out;
+}
+
+.navbar:hover
+{
+    border: 2px solid black;
+}
+
+.logo
+{
+    font-size: 3vw;
+}
+
+.menu
+{
+    font-size: 1.1vw;
+    width: 40vw;
+    height: 4.8vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.scholarships, .login, .resources, .signup
+{
+    transition: all 0.2s ease-in-out;
+}
+
+.scholarships:hover, .resources:hover, .login:hover
+{
+    font-size: 1.2vw;
+}
 
