--- a/Styles/globals.css
+++ b/Styles/globals.css
@@ -12,10 +12,12 @@
 .body
 {
     width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #A9DEF9;
 }
 
 /* Navbar Starts */
@@ -23,6 +25,7 @@
 .hs
 {
     width: 100vw;
+    height: auto !important ;
     background: #A9DEF9;
     display: flex;
     align-items: center;
@@ -123,7 +126,7 @@
 
 .hero-main
 {
-    background-color: #A9DEF9;
+    background-color: #A9DEF9;;
     width: 100vw;
     height: 89.6vh;
     /* display: flex;
@@ -135,10 +138,9 @@
 
 .round {
     width: 100vw;
-    height: 100vw;
+    height: 110vw;
     background-color: #ff99c8;
     overflow: visible;
-
     z-index: 1;
     position: absolute;
     border-radius: 50%;
@@ -231,16 +233,299 @@
 .hero-two
 {
     width: 90vw;
-    height: 50vw;
+    height: 60vw;
     display: flex;
+    flex-direction: column;
     align-items: start;
     justify-content: space-evenly;
     background-color: #FCF6BD;
+    border-radius: 1.5vw;
+    padding: 1.5vw;
 }
+
+.card-row
+{
+    width: inherit;
+    height: 35vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.cards
+{
+    width: 19vw;
+    height: 19vw;
+    border-radius: 1vw;
+}
+
+.r1-c1
+{
+    background: url(/opport.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.r1-c2
+{
+    background: url(/inclusive.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.r1-c3
+{
+    background: url(/special.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.r2-c1
+{
+    background: url(/global.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.r2-c2
+{
+    background: url(/creative.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.r2-c3
+{
+    background: url(/outdoor.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.card
+{
+    width: 20vw;
+    height: 27vw;
+    transition: all 0.2s ease-in-out;
+    padding: 0.5vw;
+    border-radius: 1vw;
+    text-align: center;
+}
+
+.card:hover
+{
+    scale: 1.04;
+}
+
+.card h1
+{
+    margin: 0.5vw 0 0 0;
+    font-size: 1.5vw;
+    transition: all 0.2s ease-in-out;
+}
+
+.card p
+{
+    font-size: 1.1vw;
+    transition: all 0.2s ease-in-out;
+}
+
+.card:hover
+{
+    background-color: #fff;
+}
+
 
 /* Div 2 Ends */
 
+/* Hero ends */
 
+
+
+
+/* Search page */
+
+bodysearct{
+    background-color: #f9fafa;
+  }
+  #searchbar{
+    display: flex;
+    justify-content: center;
+  }
+ #searchtext{
+  width: 993px;
+  padding: 5px;
+  margin: 5px;
+  font-weight: lighter;
+  background-color: rgb(250, 237, 239);
+  border: 1px solid rgb(235, 211, 215);
+  height: 20px;
+ }
+ #searchbutton{
+  margin: 5px;
+  height: 32px;
+  background-color: #1a2424;
+  color: white;
+  border-radius: 5px;
+ }
+ #searchbutton:hover{
+  background-color: gray;
+  color: black;
+  font-weight: bold;
+ }
+ header{
+  display: block;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  position: absolute;
+  left: 135px;
+  color: #0F52BA;
+  font-weight: 500;
+  font-size: 40px;
+ }
+ #container{
+  display: flex;
+  height: 410px;
+  position: relative;
+  top: 170px;
+  left: 135px;
+  right: 100px;
+  width: 1067px;
+ }
+ p{
+  font-size: 1.2rem;
+ }
+ #c1{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  max-width: 535px;
+ }
+ h2{
+  color: #00a2ed;
+  font-weight: 500;
+ }
+ #c2{
+  max-width: 533px;
+ }
+ img{
+  position: relative;
+  top: 35px;
+  height: 340px;
+  width: 523px;
+ }
+ @media (max-width:450px){
+  #searchbar{
+    width: 100%;
+    display: block;
+  }
+  #searchtext{
+    margin: 0px;
+    width: 75%;
+  }
+  header{
+    position: absolute;
+    left: 0px;
+    font-size: 1.5rem;
+    top: 20px;
+  }
+  #container{
+    display: flex;
+    left: 0px;
+    width: 95%;
+    top: 164px;
+    margin: 0px;
+    flex-direction: column-reverse;
+  }
+  img{
+  position: relative;
+  top: 3px;
+  height: 146px;
+  width: 80%;
+  margin-bottom: 10px;
+  }
+  p{
+    font-size: 0.9rem;
+  }
+  #c1{
+    flex-wrap: wrap;
+    
+  }
+  #c2
+  {
+    background: url(/schol.jpg) no-repeat center;
+    background-size: cover;
+  }
+ }
+ @media (min-width:451px) and (max-width:1200px){
+  #searchbar{
+    position: absolute;
+    left: 40px;
+    height: 20%;
+    width: 100%;
+  }
+  #searchtext{
+    width: 85%;
+  }
+  header{
+    position: absolute;
+    left: 60px;
+    top: 45px;
+  }
+  #container{
+    display: flex;
+    position: relative;
+    left: 60px;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    height: 800px;
+  }
+  #c2 {
+  position: relative;
+  top: -31px;
+  height: 370px;
+  width: 586px;
+  }
+ }
+
+
+
+ /* FOOTER STARTS */
+
+.footer
+{
+    width: 100vw;
+    height: 25vw;
+    background-color: #909bff;
+    margin: 68vw 0 0;
+    border-top-right-radius: 2vw;
+    border-top-left-radius: 2vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 2vw 3vw;  
+    text-align: center; 
+}
+
+.about h1, .legal h1, .help h1
+{
+    font-size: 2vw;
+    font-weight: 700;
+    margin: 1.2w;
+}
+
+.about p, .help p, .legal p
+{
+    font-size: 1.3vw;
+    margin: 0.5vw;
+}
+
+.links
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 60vw;
+}
+
+ /* FOOTER ENDS */
+
+ /* Search Page */
 ::-webkit-scrollbar
 {
     width: 0;
